@@ -1,1 +1,1 @@
-1.8.9.0-rc3
+1.8.9.0
