@@ -1,3 +1,10 @@
+2012-01-27  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.9.0 Released.
+
+	* Test results:
+	  http://bamboo.asterisk.org/browse/TESTING-ASTERISK1890RCS-6
+
 2012-01-24  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.9.0-rc3 Released.
